Fix guide locations list styles again on safari (icon sizes)

--- a/src/pages/Guide/components/GuideLocationsList/GuideLocationsList.scss
+++ b/src/pages/Guide/components/GuideLocationsList/GuideLocationsList.scss
@@ -29,6 +29,12 @@
   padding: 16px 0px 16px 10px;
 }
 
+_::-webkit-full-page-media,
+_:future,
+:root .Guide-info-location-list-item {
+  padding: 0px 0px 0px 10px;
+}
+
 .Guide-info-location-list-item-label {
   @include normal-mono;
   font-weight: 600;
@@ -42,7 +48,6 @@
   @include normal;
   padding-left: 40px;
   padding-right: 40px;
-  padding-bottom: 10px;
   margin-block-start: 0px;
 }
 
